--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="shortcut icon" href="/src/assets/images/logo-transparente.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/logo-transparente.png" type="image/x-icon">
     
     <title>Cabañas Tacuifi</title>
   </head>
