--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="shortcut icon" href="/logo-transparente.png" type="image/x-icon">
-    
-    <title>Cabañas Tacuifi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/logo-transparente.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/logo-transparente.png" />
+
+    <!-- Title -->
+    <title>Cabañas Tacuifí | Los Reartes - Valle de Calamuchita, Córdoba</title>
+
+    <!-- Meta Description -->
+    <meta 
+      name="description" 
+      content="Cabañas Tacuifí en Los Reartes, Córdoba. A minutos de Villa General Belgrano y La Cumbrecita. Confort, naturaleza y tranquilidad en pleno Valle de Calamuchita." 
+    />
+
+    <!-- Keywords (no tan relevantes hoy en día, pero suma) -->
+    <meta 
+      name="keywords" 
+      content="cabañas Los Reartes, alojamiento Córdoba, Valle de Calamuchita, Villa General Belgrano, La Cumbrecita, turismo Córdoba" 
+    />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://tacuifi.com.ar/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cabañas Tacuifí | Los Reartes, Córdoba" />
+    <meta 
+      property="og:description" 
+      content="Alojamiento en Los Reartes, Valle de Calamuchita. Cerca de Villa General Belgrano y La Cumbrecita. ¡Tu descanso ideal en las sierras de Córdoba!" 
+    />
+    <meta property="og:image" content="https://tacuifi.com.ar/logo-transparente.png" />
+    <meta property="og:url" content="https://tacuifi.com.ar/" />
+    <meta property="og:site_name" content="Cabañas Tacuifí" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cabañas Tacuifí | Los Reartes, Córdoba" />
+    <meta 
+      name="twitter:description" 
+      content="Disfrutá de confort y naturaleza en Cabañas Tacuifí, Valle de Calamuchita. A 8 km de Villa General Belgrano." 
+    />
+    <meta name="twitter:image" content="https://tacuifi.com.ar/logo-transparente.png" />
+
+    <!-- PWA / Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#16a34a" />
+
+    <!-- Preload / Optimización -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+
+    <!-- Datos estructurados JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LodgingBusiness",
+      "name": "Cabañas Tacuifí",
+      "image": "https://tacuifi.com.ar/logo-transparente.png",
+      "url": "https://tacuifi.com.ar/",
+      "telephone": "+54 9 3546 402842",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Av. San Martín s/n",
+        "addressLocality": "Los Reartes",
+        "addressRegion": "Córdoba",
+        "addressCountry": "AR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "-31.9228747",
+        "longitude": "-64.5780679"
+      },
+      "priceRange": "$$",
+      "amenityFeature": [
+        { "@type": "LocationFeatureSpecification", "name": "WiFi", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Estacionamiento", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Apto mascotas", "value": true }
+      ],
+      "sameAs": [
+        "https://www.facebook.com/tacuifi",
+        "https://www.instagram.com/tacuifi"
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
